crates/schematic/tests/snapshots/generator_test__json_schema__not_required.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "GenConfig",
  "deprecated": true,
  "type": "object",
  "properties": {
    "boolean": {
      "type": "boolean"
    },
    "date": {
      "type": "string",
      "format": "date"
    },
    "datetime": {
      "type": "string",
      "format": "date-time"
    },
    "decimal": {
      "type": "string",
      "format": "decimal"
    },
    "enums": {
      "description": "This is a list of `enumerable` values.",
      "default": "foo",
      "allOf": [
        {
          "$ref": "#/definitions/BasicEnum"
        }
      ]
    },
    "fallback_enum": {
      "default": "foo",
      "allOf": [
        {
          "$ref": "#/definitions/FallbackEnum"
        }
      ]
    },
    "float32": {
      "type": "number"
    },
    "float64": {
      "type": "number"
    },
    "indexmap": {
      "type": "object",
      "additionalProperties": {
        "type": "string"
      },
      "propertyNames": {
        "type": "string"
      }
    },
    "indexset": {
      "anyOf": [
        {
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "json_value": {
      "type": [
        "boolean",
        "object",
        "array",
        "number",
        "string",
        "integer"
      ]
    },
    "map": {
      "type": "object",
      "additionalProperties": {
        "type": "number"
      },
      "propertyNames": {
        "type": "string"
      }
    },
    "nested": {
      "description": "**Nested** field.",
      "allOf": [
        {
          "$ref": "#/definitions/AnotherConfig"
        }
      ]
    },
    "number": {
      "type": "number"
    },
    "path": {
      "type": "string",
      "format": "path"
    },
    "regex": {
      "type": "string",
      "format": "regex"
    },
    "rel_path": {
      "type": "string",
      "format": "path"
    },
    "string": {
      "type": "string"
    },
    "time": {
      "type": "string",
      "format": "time"
    },
    "toml_value": {
      "anyOf": [
        {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        {
          "type": "null"
        }
      ]
    },
    "url": {
      "anyOf": [
        {
          "type": "string",
          "format": "uri"
        },
        {
          "type": "null"
        }
      ]
    },
    "uuid": {
      "type": "string",
      "format": "uuid"
    },
    "vector": {
      "description": "This is a list of strings.",
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "version": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "version2": {
      "type": "string"
    },
    "version_req": {
      "type": "string"
    },
    "yaml_value": {
      "type": [
        "boolean",
        "object",
        "array",
        "number",
        "string",
        "integer"
      ]
    }
  },
  "additionalProperties": {
    "type": [
      "boolean",
      "object",
      "array",
      "number",
      "string",
      "integer"
    ]
  },
  "definitions": {
    "AnotherConfig": {
      "title": "AnotherConfig",
      "description": "Some comment.",
      "type": "object",
      "properties": {
        "enums": {
          "description": "An optional enum.",
          "default": "foo",
          "anyOf": [
            {
              "$ref": "#/definitions/BasicEnum"
            },
            {
              "type": "null"
            }
          ]
        },
        "opt": {
          "description": "An optional string.",
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "additionalProperties": false
    },
    "BasicEnum": {
      "title": "BasicEnum",
      "description": "Docblock comment.",
      "type": "string",
      "enum": [
        "foo",
        "bar",
        "baz"
      ]
    },
    "FallbackEnum": {
      "title": "FallbackEnum",
      "anyOf": [
        {
          "const": "foo"
        },
        {
          "const": "bar"
        },
        {
          "const": "baz"
        },
        {
          "type": "string"
        }
      ]
    }
  }
}
