crates/schematic/tests/snapshots/generator_test__json_schema__partials.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "title": "PartialGenConfig",
  "deprecated": true,
  "type": "object",
  "properties": {
    "boolean": {
      "anyOf": [
        {
          "type": "boolean"
        },
        {
          "type": "null"
        }
      ]
    },
    "date": {
      "anyOf": [
        {
          "type": "string",
          "format": "date"
        },
        {
          "type": "null"
        }
      ]
    },
    "datetime": {
      "anyOf": [
        {
          "type": "string",
          "format": "date-time"
        },
        {
          "type": "null"
        }
      ]
    },
    "decimal": {
      "anyOf": [
        {
          "type": "string",
          "format": "decimal"
        },
        {
          "type": "null"
        }
      ]
    },
    "enums": {
      "description": "This is a list of `enumerable` values.",
      "default": "foo",
      "anyOf": [
        {
          "$ref": "#/definitions/BasicEnum"
        },
        {
          "type": "null"
        }
      ]
    },
    "fallback_enum": {
      "default": "foo",
      "anyOf": [
        {
          "$ref": "#/definitions/FallbackEnum"
        },
        {
          "type": "null"
        }
      ]
    },
    "float32": {
      "anyOf": [
        {
          "type": "number"
        },
        {
          "type": "null"
        }
      ]
    },
    "float64": {
      "anyOf": [
        {
          "type": "number"
        },
        {
          "type": "null"
        }
      ]
    },
    "indexmap": {
      "anyOf": [
        {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          },
          "propertyNames": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "indexset": {
      "anyOf": [
        {
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "json_value": {
      "anyOf": [
        {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        {
          "type": "null"
        }
      ]
    },
    "map": {
      "anyOf": [
        {
          "type": "object",
          "additionalProperties": {
            "type": "number"
          },
          "propertyNames": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "nested": {
      "description": "**Nested** field.",
      "anyOf": [
        {
          "$ref": "#/definitions/PartialAnotherConfig"
        },
        {
          "type": "null"
        }
      ]
    },
    "number": {
      "anyOf": [
        {
          "type": "number"
        },
        {
          "type": "null"
        }
      ]
    },
    "path": {
      "anyOf": [
        {
          "type": "string",
          "format": "path"
        },
        {
          "type": "null"
        }
      ]
    },
    "regex": {
      "anyOf": [
        {
          "type": "string",
          "format": "regex"
        },
        {
          "type": "null"
        }
      ]
    },
    "rel_path": {
      "anyOf": [
        {
          "type": "string",
          "format": "path"
        },
        {
          "type": "null"
        }
      ]
    },
    "string": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "time": {
      "anyOf": [
        {
          "type": "string",
          "format": "time"
        },
        {
          "type": "null"
        }
      ]
    },
    "toml_value": {
      "anyOf": [
        {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        {
          "type": "null"
        }
      ]
    },
    "url": {
      "anyOf": [
        {
          "type": "string",
          "format": "uri"
        },
        {
          "type": "null"
        }
      ]
    },
    "uuid": {
      "anyOf": [
        {
          "type": "string",
          "format": "uuid"
        },
        {
          "type": "null"
        }
      ]
    },
    "vector": {
      "description": "This is a list of strings.",
      "anyOf": [
        {
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "version": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "version2": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "version_req": {
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "yaml_value": {
      "anyOf": [
        {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        {
          "type": "null"
        }
      ]
    }
  },
  "additionalProperties": {
    "type": [
      "boolean",
      "object",
      "array",
      "number",
      "string",
      "integer"
    ]
  },
  "definitions": {
    "AnotherConfig": {
      "title": "AnotherConfig",
      "description": "Some comment.",
      "type": "object",
      "required": [
        "enums",
        "opt"
      ],
      "properties": {
        "enums": {
          "description": "An optional enum.",
          "default": "foo",
          "anyOf": [
            {
              "$ref": "#/definitions/BasicEnum"
            },
            {
              "type": "null"
            }
          ]
        },
        "opt": {
          "description": "An optional string.",
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "additionalProperties": false
    },
    "BasicEnum": {
      "title": "BasicEnum",
      "description": "Docblock comment.",
      "type": "string",
      "enum": [
        "foo",
        "bar",
        "baz"
      ]
    },
    "FallbackEnum": {
      "title": "FallbackEnum",
      "anyOf": [
        {
          "const": "foo"
        },
        {
          "const": "bar"
        },
        {
          "const": "baz"
        },
        {
          "type": "string"
        }
      ]
    },
    "GenConfig": {
      "title": "GenConfig",
      "deprecated": true,
      "type": "object",
      "required": [
        "boolean",
        "date",
        "datetime",
        "decimal",
        "enums",
        "fallback_enum",
        "float32",
        "float64",
        "indexmap",
        "indexset",
        "json_value",
        "map",
        "nested",
        "number",
        "path",
        "regex",
        "rel_path",
        "string",
        "time",
        "toml_value",
        "url",
        "uuid",
        "vector",
        "version",
        "version2",
        "version_req",
        "yaml_value"
      ],
      "properties": {
        "boolean": {
          "type": "boolean"
        },
        "date": {
          "type": "string",
          "format": "date"
        },
        "datetime": {
          "type": "string",
          "format": "date-time"
        },
        "decimal": {
          "type": "string",
          "format": "decimal"
        },
        "enums": {
          "description": "This is a list of `enumerable` values.",
          "default": "foo",
          "allOf": [
            {
              "$ref": "#/definitions/BasicEnum"
            }
          ]
        },
        "fallback_enum": {
          "default": "foo",
          "allOf": [
            {
              "$ref": "#/definitions/FallbackEnum"
            }
          ]
        },
        "float32": {
          "type": "number"
        },
        "float64": {
          "type": "number"
        },
        "indexmap": {
          "type": "object",
          "additionalProperties": {
            "type": "string"
          },
          "propertyNames": {
            "type": "string"
          }
        },
        "indexset": {
          "anyOf": [
            {
              "type": "array",
              "items": {
                "type": "string"
              }
            },
            {
              "type": "null"
            }
          ]
        },
        "json_value": {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        "map": {
          "type": "object",
          "additionalProperties": {
            "type": "number"
          },
          "propertyNames": {
            "type": "string"
          }
        },
        "nested": {
          "description": "**Nested** field.",
          "allOf": [
            {
              "$ref": "#/definitions/AnotherConfig"
            }
          ]
        },
        "number": {
          "type": "number"
        },
        "path": {
          "type": "string",
          "format": "path"
        },
        "regex": {
          "type": "string",
          "format": "regex"
        },
        "rel_path": {
          "type": "string",
          "format": "path"
        },
        "string": {
          "type": "string"
        },
        "time": {
          "type": "string",
          "format": "time"
        },
        "toml_value": {
          "anyOf": [
            {
              "type": [
                "boolean",
                "object",
                "array",
                "number",
                "string",
                "integer"
              ]
            },
            {
              "type": "null"
            }
          ]
        },
        "url": {
          "anyOf": [
            {
              "type": "string",
              "format": "uri"
            },
            {
              "type": "null"
            }
          ]
        },
        "uuid": {
          "type": "string",
          "format": "uuid"
        },
        "vector": {
          "description": "This is a list of strings.",
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        "version": {
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        },
        "version2": {
          "type": "string"
        },
        "version_req": {
          "type": "string"
        },
        "yaml_value": {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        }
      },
      "additionalProperties": {
        "type": [
          "boolean",
          "object",
          "array",
          "number",
          "string",
          "integer"
        ]
      }
    },
    "PartialAnotherConfig": {
      "title": "PartialAnotherConfig",
      "description": "Some comment.",
      "type": "object",
      "properties": {
        "enums": {
          "description": "An optional enum.",
          "default": "foo",
          "anyOf": [
            {
              "$ref": "#/definitions/BasicEnum"
            },
            {
              "type": "null"
            }
          ]
        },
        "opt": {
          "description": "An optional string.",
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "additionalProperties": false
    }
  }
}
