crates/schematic/tests/snapshots/generator_test__json_schema__with_titles.snap
---
source: crates/schematic/tests/generator_test.rs
expression: "fs::read_to_string(file).unwrap()"
---
{
  "$schema": "http://json-schema.org/draft-07/schema#",
  "deprecated": true,
  "type": "object",
  "required": [
    "boolean",
    "date",
    "datetime",
    "decimal",
    "enums",
    "fallback_enum",
    "float32",
    "float64",
    "indexmap",
    "indexset",
    "json_value",
    "map",
    "nested",
    "number",
    "path",
    "regex",
    "rel_path",
    "string",
    "time",
    "toml_value",
    "url",
    "uuid",
    "vector",
    "version",
    "version2",
    "version_req",
    "yaml_value"
  ],
  "properties": {
    "boolean": {
      "title": "boolean",
      "type": "boolean"
    },
    "date": {
      "title": "date",
      "type": "string",
      "format": "date"
    },
    "datetime": {
      "title": "datetime",
      "type": "string",
      "format": "date-time"
    },
    "decimal": {
      "title": "decimal",
      "type": "string",
      "format": "decimal"
    },
    "enums": {
      "title": "enums",
      "description": "This is a list of `enumerable` values.",
      "default": "foo",
      "allOf": [
        {
          "$ref": "#/definitions/BasicEnum"
        }
      ]
    },
    "fallback_enum": {
      "title": "fallback_enum",
      "default": "foo",
      "allOf": [
        {
          "$ref": "#/definitions/FallbackEnum"
        }
      ]
    },
    "float32": {
      "title": "float32",
      "type": "number"
    },
    "float64": {
      "title": "float64",
      "type": "number"
    },
    "indexmap": {
      "title": "indexmap",
      "type": "object",
      "additionalProperties": {
        "type": "string"
      },
      "propertyNames": {
        "type": "string"
      }
    },
    "indexset": {
      "title": "indexset",
      "anyOf": [
        {
          "type": "array",
          "items": {
            "type": "string"
          }
        },
        {
          "type": "null"
        }
      ]
    },
    "json_value": {
      "title": "json_value",
      "type": [
        "boolean",
        "object",
        "array",
        "number",
        "string",
        "integer"
      ]
    },
    "map": {
      "title": "map",
      "type": "object",
      "additionalProperties": {
        "type": "number"
      },
      "propertyNames": {
        "type": "string"
      }
    },
    "nested": {
      "title": "nested",
      "description": "**Nested** field.",
      "allOf": [
        {
          "$ref": "#/definitions/AnotherConfig"
        }
      ]
    },
    "number": {
      "title": "number",
      "type": "number"
    },
    "path": {
      "title": "path",
      "type": "string",
      "format": "path"
    },
    "regex": {
      "title": "regex",
      "type": "string",
      "format": "regex"
    },
    "rel_path": {
      "title": "rel_path",
      "type": "string",
      "format": "path"
    },
    "string": {
      "title": "string",
      "type": "string"
    },
    "time": {
      "title": "time",
      "type": "string",
      "format": "time"
    },
    "toml_value": {
      "title": "toml_value",
      "anyOf": [
        {
          "type": [
            "boolean",
            "object",
            "array",
            "number",
            "string",
            "integer"
          ]
        },
        {
          "type": "null"
        }
      ]
    },
    "url": {
      "title": "url",
      "anyOf": [
        {
          "type": "string",
          "format": "uri"
        },
        {
          "type": "null"
        }
      ]
    },
    "uuid": {
      "title": "uuid",
      "type": "string",
      "format": "uuid"
    },
    "vector": {
      "title": "vector",
      "description": "This is a list of strings.",
      "type": "array",
      "items": {
        "type": "string"
      }
    },
    "version": {
      "title": "version",
      "anyOf": [
        {
          "type": "string"
        },
        {
          "type": "null"
        }
      ]
    },
    "version2": {
      "title": "version2",
      "type": "string"
    },
    "version_req": {
      "title": "version_req",
      "type": "string"
    },
    "yaml_value": {
      "title": "yaml_value",
      "type": [
        "boolean",
        "object",
        "array",
        "number",
        "string",
        "integer"
      ]
    }
  },
  "additionalProperties": {
    "type": [
      "boolean",
      "object",
      "array",
      "number",
      "string",
      "integer"
    ]
  },
  "definitions": {
    "AnotherConfig": {
      "description": "Some comment.",
      "type": "object",
      "required": [
        "enums",
        "opt"
      ],
      "properties": {
        "enums": {
          "title": "enums",
          "description": "An optional enum.",
          "default": "foo",
          "anyOf": [
            {
              "$ref": "#/definitions/BasicEnum"
            },
            {
              "type": "null"
            }
          ]
        },
        "opt": {
          "title": "opt",
          "description": "An optional string.",
          "anyOf": [
            {
              "type": "string"
            },
            {
              "type": "null"
            }
          ]
        }
      },
      "additionalProperties": false
    },
    "BasicEnum": {
      "description": "Docblock comment.",
      "type": "string",
      "enum": [
        "foo",
        "bar",
        "baz"
      ]
    },
    "FallbackEnum": {
      "anyOf": [
        {
          "title": "foo",
          "const": "foo"
        },
        {
          "title": "bar",
          "const": "bar"
        },
        {
          "title": "baz",
          "const": "baz"
        },
        {
          "title": "other",
          "type": "string"
        }
      ]
    }
  }
}
